fixed html validator errors and reduced whitespace

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,8 @@ main h1 {
 }
 
 #submit-button {
+  background-color: transparent;
+  color: white;
   text-align: center;
   position: absolute;
   top: 115px;
@@ -162,6 +164,7 @@ main h1 {
 #submit-button:hover {
   cursor: pointer;
   background-color: white;
+  color: black;
 }
 
 #greeting-container,
@@ -182,6 +185,15 @@ main h1 {
 #frosty-container {
   display: flex;
   justify-content: center;
+}
+
+#frosted-cookies {
+  border-radius: 50%; 
+  transition: 1s;
+}
+
+#frosted-cookies:hover {
+  transform: rotate(360deg);
 }
 
 #contact-information {
